--- a/src/lib/styles/reset.css
+++ b/src/lib/styles/reset.css
@@ -19,7 +19,7 @@
 html { 
   font-size: var(--font-size);
   text-size-adjust: 100%;
-  scroll-behavior: smooth;
+  /* scroll-behavior: smooth; */
   scroll-padding-top: calc(var(--header-height) + 1rem);
 }
 body {
